fix the frontend bugs based on the backend changes